src/test/deca/codegen/valid/arithmetique/comparaison-float.deca
// Description:
//    Test : Vérification d'une condition simple avec un flottant.
//
// Résultats:
//    Doit afficher "OK".
//
// Historique:
//    créé le 01/01/2025

{
    int a = 1 ;
    if (4.2 < a) {
        println("lower");
    }
    else {
        println("greater");
    }
}